--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,7 @@ button:disabled,
 }
 
 .prose code {
-  @apply bg-neutral-100 dark:bg-neutral-800 rounded-sm p-0.5 text-xs;
+  @apply bg-neutral-100 dark:bg-neutral-800 rounded-sm p-0.5 text-xs border border-neutral-300 dark:border-neutral-700;
   word-break: break-word;
 }
 
